Fix logo visibility and mobile responsiveness

--- a/css/international college academy.css
+++ b/css/international college academy.css
@@ -298,7 +298,7 @@ a{
   display: block;
   border: 3px solid goldenrod;
   border-radius: 10px;
-  margin-top: -270%;
+  margin-top: -300%;
   margin-left: 90px;
   position: relative;
   z-index: 99;
